flask-backend-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"flask-api"}}'
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: flask-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    name: http 
  selector:
    app: flask-api
