ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: ingress-ip-new # gcloud compute addresses create --global ingress-ip
    networking.gke.io/managed-certificates: dev-cert
    networking.gke.io/v1beta1.FrontendConfig: frontend-config
spec:
  # defaultBackend:
  #   service:
  #     name: http-example
  #     port:
  #       number: 80
  rules:
  - host: jenkins.devopslabs.cloud
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: jenkins-server
            port:
              number: 8080
        
  - host: api.devopslabs.cloud
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-api
            port:
              number: 80

  - host: nginx.devopslabs.cloud
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              number: 80
